@@ -25,6 +25,8 @@ import com.graphhopper.application.util.GraphHopperServerTestConfiguration;
 import com.graphhopper.config.Profile;
 import com.graphhopper.gtfs.Request;
 import com.graphhopper.resources.InfoResource;
+import com.graphhopper.routing.TestProfiles;
+import com.graphhopper.util.BodyAndStatus;
 import com.graphhopper.util.Helper;
 import io.dropwizard.testing.junit5.DropwizardAppExtension;
 import io.dropwizard.testing.junit5.DropwizardExtensionsSupport;
@@ -36,8 +38,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import javax.ws.rs.core.Response;
 import java.io.File;
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.List;
 
+import static com.graphhopper.application.resources.Util.getWithStatus;
 import static com.graphhopper.application.util.TestUtils.clientTarget;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -57,7 +60,8 @@ public class PtRouteResourceTest {
                 putObject("gtfs.file", "../reader-gtfs/files/sample-feed").
                 putObject("graph.location", DIR).
                 putObject("import.osm.ignored_highways", "").
-                setProfiles(Collections.singletonList(new Profile("foot").setVehicle("foot").setWeighting("fastest")));
+                putObject("graph.encoded_values", "foot_access, foot_priority, foot_average_speed").
+                setProfiles(List.of(TestProfiles.accessSpeedAndPriority("foot")));
         return config;
     }
 
@@ -69,94 +73,86 @@ public class PtRouteResourceTest {
 
     @Test
     public void testStationStationQuery() {
-        final Response response = clientTarget(app, "/route")
+        JsonNode jsonNode = clientTarget(app, "/route")
                 .queryParam("point", "Stop(NADAV)")
                 .queryParam("point", "Stop(NANAA)")
                 .queryParam("profile", "pt")
                 .queryParam("pt.earliest_departure_time", "2007-01-01T15:44:00Z")
-                .request().buildGet().invoke();
-        assertEquals(200, response.getStatus());
-        JsonNode jsonNode = response.readEntity(JsonNode.class);
+                .request().get(JsonNode.class);
         assertEquals(1, jsonNode.at("/paths/0/legs").size());
     }
 
     @Test
     public void testStationStationQueryWithOffsetDateTime() {
-        final Response response = clientTarget(app, "/route")
+        JsonNode jsonNode = clientTarget(app, "/route")
                 .queryParam("point", "Stop(NADAV)")
                 .queryParam("point", "Stop(NANAA)")
                 .queryParam("profile", "pt")
                 .queryParam("pt.earliest_departure_time", "2007-01-01T07:44:00-08:00")
-                .request().buildGet().invoke();
-        assertEquals(200, response.getStatus());
-        JsonNode jsonNode = response.readEntity(JsonNode.class);
+                .request().get(JsonNode.class);
         assertEquals(1, jsonNode.at("/paths/0/legs").size());
     }
 
     @Test
     public void testPointPointQuery() {
-        final Response response = clientTarget(app, "/route")
+        JsonNode jsonNode = clientTarget(app, "/route")
                 .queryParam("point", "36.914893,-116.76821") // NADAV stop
                 .queryParam("point", "36.914944,-116.761472") //NANAA stop
                 .queryParam("profile", "pt")
                 .queryParam("pt.earliest_departure_time", "2007-01-01T15:44:00Z")
-                .request().buildGet().invoke();
-        assertEquals(200, response.getStatus());
-        JsonNode jsonNode = response.readEntity(JsonNode.class);
+                .request().get(JsonNode.class);
         assertEquals(1, jsonNode.at("/paths/0/legs").size());
     }
 
     @Test
     public void testWalkQuery() {
-        final Response response = clientTarget(app, "/route")
+        GHResponse ghResponse = clientTarget(app, "/route")
                 .queryParam("point", "36.914893,-116.76821")
                 .queryParam("point", "36.914944,-116.761472")
                 .queryParam("profile", "foot")
-                .request().buildGet().invoke();
-        assertEquals(200, response.getStatus());
-        GHResponse ghResponse = response.readEntity(GHResponse.class);
+                .request().get(GHResponse.class);
         assertFalse(ghResponse.hasErrors());
     }
 
     @Test
     public void testNoPoints() {
-        final Response response = clientTarget(app, "/route")
+        BodyAndStatus response = getWithStatus(clientTarget(app, "/route")
                 .queryParam("profile", "pt")
-                .request().buildGet().invoke();
+        );
         assertEquals(400, response.getStatus());
     }
 
     @Test
     public void testOnePoint() {
-        final Response response = clientTarget(app, "/route")
+        BodyAndStatus response = getWithStatus(clientTarget(app, "/route")
                 .queryParam("point", "36.914893,-116.76821")
                 .queryParam("profile", "pt")
                 .queryParam("pt.earliest_departure_time", "2007-01-01T08:00:00Z")
-                .request().buildGet().invoke();
+        );
         assertEquals(400, response.getStatus());
-        JsonNode json = response.readEntity(JsonNode.class);
+        JsonNode json = response.getBody();
         assertEquals("query param point size must be between 2 and 2", json.get("message").asText());
     }
 
     @Test
     public void testBadPoints() {
-        final Response response = clientTarget(app, "/route")
+        BodyAndStatus response = getWithStatus(clientTarget(app, "/route")
                 .queryParam("point", "pups")
                 .queryParam("profile", "pt")
                 .queryParam("pt.earliest_departure_time", "2007-01-01T08:00:00Z")
-                .request().buildGet().invoke();
+        );
         assertEquals(400, response.getStatus());
     }
 
     @Test
     public void testNoTime() {
-        final Response response = clientTarget(app, "/route")
+        BodyAndStatus response = getWithStatus(clientTarget(app, "/route")
                 .queryParam("point", "36.914893,-116.76821") // NADAV stop
                 .queryParam("point", "36.914944,-116.761472") //NANAA stop
                 .queryParam("profile", "pt")
-                .request().buildGet().invoke();
+        );
         assertEquals(400, response.getStatus());
-        JsonNode json = response.readEntity(JsonNode.class);
+        JsonNode json = response.getBody();
         // Would prefer a "must not be null" message here, but is currently the same as for a bad time (see below).
         // I DO NOT want to manually catch this, I want to figure out how to fix this upstream, or live with it.
         assertTrue(json.get("message").asText().startsWith("query param pt.earliest_departure_time must"));
@@ -164,14 +160,14 @@ public class PtRouteResourceTest {
 
     @Test
     public void testBadTime() {
-        final Response response = clientTarget(app, "/route")
+        BodyAndStatus response = getWithStatus(clientTarget(app, "/route")
                 .queryParam("point", "36.914893,-116.76821") // NADAV stop
                 .queryParam("point", "36.914944,-116.761472") //NANAA stop
                 .queryParam("profile", "pt")
                 .queryParam("pt.earliest_departure_time", "wurst")
-                .request().buildGet().invoke();
+        );
         assertEquals(400, response.getStatus());
-        JsonNode json = response.readEntity(JsonNode.class);
+        JsonNode json = response.getBody();
         assertEquals("query param pt.earliest_departure_time must be in a ISO-8601 format.", json.get("message").asText());
     }
 
@@ -194,11 +190,8 @@ public class PtRouteResourceTest {
 
     @Test
     public void testInfo() {
-        final Response response = clientTarget(app, "/info")
-                .request().buildGet().invoke();
-        assertEquals(200, response.getStatus());
-        InfoResource.Info info = response.readEntity(InfoResource.Info.class);
-        assertTrue(info.supported_vehicles.contains("pt"));
+        InfoResource.Info info = clientTarget(app, "/info")
+                .request().get(InfoResource.Info.class);
         assertTrue(info.profiles.stream().anyMatch(p -> p.name.equals("pt")));
     }
 
